package designpattern.commandpattern.eg;


//定义执行操作的接口
public interface Command {
    void execute();
}
